# STT_FineTune

./: .gitignore  README.md  pyproject.toml
introduction/: transformers.ipynb
nats/: 5gram.arpa  5gram_correct.arpa  synthesise_data.ipynb  transcription_text.txt  wav2vec2.ipynb  wav2vec2_lm.ipynb  whisper.ipynb  whisper_finetune.ipynb
notebooks/: load_model.ipynb  misc.ipynb
timit/: timit_example.ipynb  timit_vocab.json
