[tool.poetry]
name = "stt"
version = "0.1.0"
description = ""
authors = ["Huy Nguyen <huy@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
torch = "1.12.1"
torchaudio = "0.12.1"
transformers = "^4.24.0"
datasets = {version="^2.7.1", extras=["audio"]}
ipykernel = "^6.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
