[tool.poetry]
name = "stt"
version = "0.1.0"
description = ""
authors = ["Huy Nguyen <huy@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
torch = {url="https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp39-cp39-win_amd64.whl"}
torchaudio = {url="https://download.pytorch.org/whl/cu117/torchaudio-0.13.0%2Bcu117-cp39-cp39-win_amd64.whl"}
transformers = {extras = ["sentencepiece"], version = "^4.25.1"}
datasets = {version="^2.7.1", extras=["audio"]}
ipykernel = "^6.17.1"
librosa = "^0.9.2"
jiwer = "^2.5.1"
ipywidgets = "^8.0.3"
gtts = "^2.3.0"
evaluate = "^0.4.0"
gradio = "^3.13.0"
altair = "^4.2.0"
kenlm = "^0.1"
pyctcdecode = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
